Changeset to code refactoring / tests